finish car session and start car heartbeat
