# internal/cars/cars_routes.go
@@ -4,8 +4,10 @@ import (
 	"github.com/go-chi/chi/v5"
 )
 
-func RegisterCarRoutes(r chi.Router, handler *CarHandler) {
-	r.Get("/car-status", handler.GetCarStatus)
+func RegisterCarsRoutes(r chi.Router, handler *CarHandler) {
+	r.Post("/cars/list", handler.GetCarsList)
+	r.Get("/cars/{id}/status", handler.GetCarStatus)
+
 	r.Get("/car-stream", handler.CarStream)
 	r.Post("/car-actions", handler.CarActions)
 }
