# internal/cars/models/car_model.go
@@ -5,6 +5,7 @@ import "time"
 type Car struct {
 	ID        string
 	Name      string
+	LastSeen  time.Time
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
